--- a/supabase/email_templates/reset_password.html
+++ b/supabase/email_templates/reset_password.html
@@ -19,10 +19,8 @@
                     <!-- Header -->
                     <tr>
                         <td align="center" style="padding: 40px 0 20px 0;">
-                            <h1
-                                style="margin: 0; color: #ffffff; font-size: 28px; font-weight: 900; letter-spacing: -1px;">
-                                <span style="color: #04B305;">/</span>Predity
-                            </h1>
+                            <img src="https://app.preditybr.com/logo.png" alt="Predity"
+                                style="max-height: 40px; display: block;" border="0">
                         </td>
                     </tr>
 
